build/classes/javacc/Grammar.jj
options { STATIC = false; }

PARSER_BEGIN(Calculator)
import java.io.*;

public class Calculator {
    public static void main(String[] args) throws Exception {
        System.out.println("Hello JavaCC");
    }
}
PARSER_END(Calculator)

/* ================== SKIP ================== */
SKIP : {
    " " | "\t" | "\n" | "\r"
}

/* ================== TOKENS ================== */
TOKEN : {

    /* Keywords */
      < CLASS: "class" >
    | < INT: "int" >
    | < IF: "if" >
    | < ELSE: "else" >
    | < WHILE: "while" >
    | < FOR: "for" >
    | < RETURN: "return" >
    | < STRING: "String" >
    | < CHAR: "char" >

    /* Identifiers & literals */
    | < IDENTIFIER: (["a"-"z","A"-"Z"])(["a"-"z","A"-"Z","0"-"9"])* >
    | < NUMBER: (["0"-"9"])+ >
    | < STRING_LITERAL: "\"" (~["\""])* "\"" >
    | < CHAR_LITERAL: "'" (~["'"])* "'" >

    /* Operators (IMPORTANT ORDER) */
    | < EQ: "==" >
    | < NEQ: "!=" >
    | < LTE: "<=" >
    | < GTE: ">=" >
    | < ASSIGN: "=" >
    | < LT: "<" >
    | < GT: ">" >
    | < PLUS: "+" >
    | < MINUS: "-" >
    | < MUL: "*" >
    | < DIV: "/" >

    /* Delimiters */
    | < SEMICOLON: ";" >
    | < LBRACE: "{" >
    | < RBRACE: "}" >
    | < LPAREN: "(" >
    | < RPAREN: ")" >
    | < COMMA: "," >
}
// Grammar rules
void Program() :
{}
{
    ( Statement() )* <EOF>
}

void Statement() :
{}
{
      VarDeclaration()
    | Assignment()
    | IfStatement()
    | WhileStatement()
    | ForStatement()
    | ReturnStatement()
    | Block()
}

void VarDeclaration() :
{}
{
    <INT> <IDENTIFIER> ( <ASSIGN> Expression() )? <SEMICOLON>
}

void Assignment() :
{}
{
    <IDENTIFIER> <ASSIGN> Expression() <SEMICOLON>
}

void Expression() :
{}
{
    RelExpression()
}

void RelExpression() :
{}
{
    AddExpression() ( ( <LT> | <GT> | <LE> | <GE> | <EQ> | <NEQ> ) AddExpression() )?
}

void AddExpression() :
{}
{
    Term() ( ( <PLUS> | <MINUS> ) Term() )*
}

void Term() :
{}
{
    Factor() ( ( <MUL> | <DIV> ) Factor() )*
}

void Factor() :
{}
{
      <NUMBER>
    | <IDENTIFIER>
    | <LPAREN> Expression() <RPAREN>
}

void IfStatement() :
{}
{
    <IF> <LPAREN> Expression() <RPAREN>
    Block()
    ( <ELSE> Block() )?
}

void WhileStatement() :
{}
{
    <WHILE> <LPAREN> Expression() <RPAREN>
    Block()
}

void ForStatement() :
{}
{
    <FOR> <LPAREN>
        ( VarDeclaration() | Assignment() | <SEMICOLON> )
        ( Expression() )? <SEMICOLON>
        ( Assignment() )?
    <RPAREN>
    Block()
}

void ReturnStatement() :
{}
{
    <RETURN> ( Expression() )? <SEMICOLON>
}

void Block() :
{}
{
    <LBRACE> ( Statement() )* <RBRACE>
}
